// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App.vue computed should match snapshot when auth true 1`] = `
<div class="app__wrapper">
  <md-toolbar-stub mdelevation="4" class="md-dense">
    <h3 class="md-title toolbar">Welcome, test@test.com</h3>
    <md-button-stub mdripple="true" type="button" class="md-primary">
      LOGOUT
    </md-button-stub>
  </md-toolbar-stub>
  <div class="app__container">
    <router-view-stub name="slide" mode="out-in"></router-view-stub>
  </div>
  <md-snackbar-stub mdpersistent="true" mdduration="4000" mdposition="center">

  </md-snackbar-stub>
</div>
`;

exports[`App.vue should match snapshot 1`] = `
<div class="app__wrapper">
  <!---->
  <div class="app__container">
    <router-view-stub name="slide" mode="out-in"></router-view-stub>
  </div>
  <md-snackbar-stub mdpersistent="true" mdduration="4000" mdposition="center">

  </md-snackbar-stub>
</div>
`;
